добавил JS, оживил две кнопки

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 			    <h2>КОНТАКТЫ</h2>
 				<div class="main-info-map-p"><p>Вы можете забрать товар сами,
                    заехав в наш офис:</p></div>
-				<a href="blank.html"><img src="img/map.jpg" width="300" height="158" alt="Карта с нашим адресом"></a>
+				<a class="link-map" href="blank.html"><img src="img/map.jpg" width="300" height="158" alt="Карта с нашим адресом"></a>
 				<a class="link-button main-info-map-link" href="blank.html">Заблудились? Напишите нам!</a>
 			</div>
 		</section>
@@ -391,7 +391,7 @@
 			<div class="container-comment">
 			<label class="comment" for="comment-field">Текст письма:</label>
 			
-			<textarea class="comment" name="comment" id="comment-field" rows="3" placeholder="В свободной форме"
+			<textarea class="comment comment-textarea" name="comment" id="comment-field" rows="3" placeholder="В свободной форме"
 			></textarea>
 		    </div>
 			
@@ -417,6 +417,9 @@
         <!-- Здесь будет форма логина и пароля -->
         <a href="#" class="close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
     </section>
+
+	<script src="js/question.js"></script>
+	<script src="js/map.js"></script>
 
   </body>
 </html>
