Оживил блок "Сервисы"

--- a/index.html
+++ b/index.html
@@ -246,12 +246,12 @@
 			<div class="main-services-list">
 
                 <div class="main-services-button">
-					<button class="services-button button-delivery">Доставка</button>
+					<button class="services-button button-delivery services-button-checked">Доставка</button>
 					<button class="services-button button-guarantee">Гарантия</button>
 					<button class="services-button button-credit">Кредит</button>
 				</div>
 
-				<div class="main-services-item services-delivery">
+				<div class="main-services-item services-delivery img-delivery">
 					<h3>Доставка</h3>
 					<p>Мы с удовольствием доставим ваш товар прямо
 						к вашему подъезду совершенно бесплатно!<br>
@@ -267,7 +267,7 @@
 						oooooooooooooooooooooo</p>
 				</div>
 
-				<div class="main-services-item  services-credit none">
+				<div class="main-services-item services-credit none">
 					<h3>Кредит</h3>
 					<p>rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr
 						rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr<br>
@@ -420,6 +420,7 @@
 
 	<script src="js/question.js"></script>
 	<script src="js/map.js"></script>
+	<script src="js/services-button.js"></script>
 
   </body>
 </html>
